--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,6 +21,13 @@
             <optional>true</optional>
         </dependency>
         
+        <dependency>
+            <groupId>com.coverity.security</groupId>
+            <artifactId>coverity-escapers</artifactId>
+            <version>1.1</version>
+            <optional>true</optional>
+        </dependency>
+        
         <!--Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
