--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
     <modules>
         <module>core</module>
+        <module>vertx</module>
     </modules>
 
     <build>
