--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<!-- Copyright 2016 Finn Bock -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -8,18 +10,18 @@
         <artifactId>taggersty</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    
+
     <artifactId>taggersty-performance</artifactId>
     <packaging>jar</packaging>
     <name>java tag generator template library - performance</name>
 
     <dependencies>
-       <dependency>
+        <dependency>
             <groupId>io.github.bckfnn</groupId>
             <artifactId>taggersty-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        
+
         <!--Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -63,7 +65,8 @@
                         <configuration>
                             <finalName>benchmark</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.openjdk.jmh.Main</mainClass>
                                 </transformer>
                             </transformers>
