--- a/vertx/pom.xml
+++ b/vertx/pom.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<!--  Copyright 2016 Finn Bock -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -8,25 +10,25 @@
         <artifactId>taggersty</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    
+
     <artifactId>taggersty-vertx</artifactId>
     <packaging>jar</packaging>
     <name>java tag generator template library - vertx</name>
 
     <dependencies>
-        
+
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>3.2.0</version>
         </dependency>
-  
+
         <dependency>
             <groupId>io.github.bckfnn</groupId>
             <artifactId>taggersty-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
- 
+
         <!--Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
