use ${project.version} for dependencies.

--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -17,9 +17,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.bckfnn</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>taggersty-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!--Test dependencies -->
