try to use autoversionsubmodules

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
                     <!-- localCheckout>true</localCheckout -->
                     <!-- Use a better name for the tag -->
                     <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoversionsubmodules>true</autoversionsubmodules>
                     <providerImplementations>
                         <git>jgit</git>
                     </providerImplementations>
