lets try a direct push

--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,10 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <!-- Keep changes in the local repo, push will be done 
                         afterwards -->
-                    <pushChanges>false</pushChanges>
+                    <!-- pushChanges>false</pushChanges-->
                     <!-- localCheckout>true</localCheckout -->
                     <!-- Use a better name for the tag -->
                     <tagNameFormat>v@{project.version}</tagNameFormat>
-                    <autoversionsubmodules>true</autoversionsubmodules>
                     <providerImplementations>
                         <git>jgit</git>
                     </providerImplementations>
