--- a/pom.xml
+++ b/pom.xml
@@ -91,28 +91,12 @@
 
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <groupId>external.atlassian.jgitflow</groupId>
+                <artifactId>jgitflow-maven-plugin</artifactId>
+                <version>1.0-m5.1</version>
                 <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <!-- Keep changes in the local repo, push will be done 
-                        afterwards -->
-                    <!-- pushChanges>false</pushChanges-->
-                    <!-- localCheckout>true</localCheckout -->
-                    <!-- Use a better name for the tag -->
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                    <providerImplementations>
-                        <git>jgit</git>
-                    </providerImplementations>
+                    <!-- see goals wiki page for configuration options -->
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-jgit</artifactId>
-                        <version>1.9.4</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
         </plugins>
