--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.github.bckfnn</groupId>
         <artifactId>taggersty</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>taggersty-performance</artifactId>
