--- a/vertx/pom.xml
+++ b/vertx/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.github.bckfnn</groupId>
         <artifactId>taggersty</artifactId>
-        <version>0.0.4-SNAPSHOT</version>
+        <version>0.0.4</version>
     </parent>
 
     <artifactId>taggersty-vertx</artifactId>
