--- a/xslfo/pom.xml
+++ b/xslfo/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.bckfnn</groupId>
         <artifactId>taggersty</artifactId>
-        <version>0.0.5-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
 
     <artifactId>taggersty-xslfo</artifactId>
