--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,12 @@
                 <artifactId>jgitflow-maven-plugin</artifactId>
                 <version>1.0-m5.1</version>
                 <configuration>
+                    <!-- keepBranch>true</keepBranch-->
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                     <!-- see goals wiki page for configuration options -->
                 </configuration>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
