--- a/xslfo/pom.xml
+++ b/xslfo/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.bckfnn</groupId>
         <artifactId>taggersty</artifactId>
-        <version>0.0.8-SNAPSHOT</version>
+        <version>0.0.7</version>
     </parent>
 
     <artifactId>taggersty-xslfo</artifactId>
